# DirectSQL

./: .editorconfig  .gitignore  README.md  design.md  pyproject.toml
directsql/: __init__.py  cache.py  converters.py  executors.py  openapi.py  schema.py  server.py  types.py
docs/: sqlite.md  wsgi.md
example/: README.md  app.py  run.sh  spec.yaml
example/migrations/: 01_initial.sql
example/sql/: get_settings.md  post_settings.md
example/sql/misc/: get_foreign_keys.md
example/sql/v1/: _auth.md  get_lists.md
example/sql/v1/lists/: delete.md  get.md  post.md  put.md
example/sql/v1/sessions/: delete.md  get.md  post.md
example/sql/v1/users/: post.md
